--- a/proj.win32/PuzzleGame.vcxproj.filters
+++ b/proj.win32/PuzzleGame.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="Monster.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="TestScene3.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="MainScreen.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -36,6 +42,12 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="Monster.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="TestScene3.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="MainScreen.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
